# html2VD

./: .gitignore  Cargo.toml  LICENSE  README.md  l.rs
nodejs/: index.js  package-lock.json  package.json
nodejs/web/: .gitignore  html2VD.js  html2VD_bg.wasm  index.html
src/: lib.rs  main.rs  virtual_dom.rs
src/algo/: virtual_dom.rs
src/model/: element_node.rs  fragment_node.rs  mod.rs  node.rs  text_node.rs  vd.rs
src/tests/: node.rs  vd.rs  virtual_dom.rs
src/utils/: html_filter.rs  mod.rs
tests/: jest.config.js  package.json  pkg.sh  vd.test.js  virtual_dom.rs
tests/pkg/: html2VD.js  html2VD_bg.wasm
tests/utils/: vdDiff.js
