[package]
name = "html2VD"
version = "0.1.0"
authors = ["RomChung <thelns@vip.qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen= {version="*", features=["serde-serialize"]}
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
htmlstream = "*"
log = "*"
serde= {version="*", features = ["derive", "rc"]}
serde_json="*"
serde_derive="*"
regex="*"

[dev-dependencies]
wasm-bindgen-test = "0.3.20"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
